@@ -12,6 +12,11 @@ var util = require("util"),
  */
 exports.version = [0, 14, 0];
 
+/**
+ * The default port that Strata servers run on.
+ */
+exports.defaultPort = 1982;
+
 exports.run = run;
 exports.createServer = createServer;
 exports.startServer = startServer;
@@ -117,7 +122,7 @@ function createServer(opts, requestListener) {
  * following properties:
  *
  *   - host     The host name to accept connections on (defaults to INADDR_ANY)
- *   - port     The port to listen on (defaults to 1982)
+ *   - port     The port to listen on (defaults to strata.defaultPort)
  *   - socket   Unix socket file to listen on (trumps host/port)
  *   - quiet    Set `true` to prevent the server from writing a startup message
  *              to the console after it starts
@@ -158,7 +163,7 @@ function startServer(server, opts, listeningListener) {
     if (opts.socket) {
         server.listen(opts.socket);
     } else {
-        server.listen(opts.port || 1982, opts.host);
+        server.listen(opts.port || exports.defaultPort, opts.host);
     }
 }
 
